--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,4 +26,5 @@ body {
   background: var(--color-background-main);
   color: var(--color-foreground);
   font-family: var(--font-sans), Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
